# StarRenderer

./: .gitignore  meson.build
include/: glinternal.h
include/glad/: glad.h
include/starengine/: models.h  segl.h  seio.h
res/: fragment.frag  vertex.vert
src/: main.c
src/engine/: glad.c
src/engine/gl/: callbacks.c  gl.c  renderer.c
src/engine/io/: file.c  simplemd2.c
